src/project/manifest/snapshots/pixi__project__manifest__system_requirements__test__version_misspelled.snap
---
source: src/project/manifest/system_requirements.rs
expression: "\n        [system-requirements]\n        libc = { verion = \"2.12\" }\n        "
---
TOML parse error at line 3, column 16
  |
3 |         libc = { verion = "2.12" }
  |                ^^^^^^^^^^^^^^^^^^^
unknown field `verion`, expected `family` or `version`



